[gd_scene load_steps=22 format=3 uid="uid://cvx3y3dj6t1w"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1"]
[ext_resource type="Script" path="res://Scripts/PlayerSM.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://dj0jgw7rtnycj" path="res://Assets/Players/players blue x1.png" id="3_tdmvy"]
[ext_resource type="Script" path="res://Scripts/Camera.gd" id="5"]
[ext_resource type="PackedScene" uid="uid://dduyme14pru7f" path="res://Scenes/HealthBar.tscn" id="6"]
[ext_resource type="AudioStream" uid="uid://bpms74jiln7av" path="res://SFX/laserShoot.wav" id="7"]
[ext_resource type="AudioStream" uid="uid://dv1vx34sw2p5s" path="res://SFX/hitHurt.wav" id="8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ok07p"]
atlas = ExtResource("3_tdmvy")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_70pof"]
atlas = ExtResource("3_tdmvy")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_74p34"]
atlas = ExtResource("3_tdmvy")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7okb"]
atlas = ExtResource("3_tdmvy")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4dn3a"]
atlas = ExtResource("3_tdmvy")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ox4y"]
atlas = ExtResource("3_tdmvy")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jy778"]
atlas = ExtResource("3_tdmvy")
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_terbe"]
atlas = ExtResource("3_tdmvy")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4rh3"]
atlas = ExtResource("3_tdmvy")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvync"]
atlas = ExtResource("3_tdmvy")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4mhlh"]
atlas = ExtResource("3_tdmvy")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rusi0"]
atlas = ExtResource("3_tdmvy")
region = Rect2(96, 96, 32, 32)

[sub_resource type="SpriteFrames" id="2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ok07p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70pof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74p34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7okb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4dn3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ox4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jy778")
}],
"loop": false,
"name": &"Death",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_terbe")
}],
"loop": true,
"name": &"Idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4rh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvync")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4mhlh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rusi0")
}],
"loop": true,
"name": &"WalkSide",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(49, 79.5)

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1")

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource("2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="StateMachine"]
position = Vector2(1, 0.499997)
scale = Vector2(3.875, 3.9375)
sprite_frames = SubResource("2")
animation = &"Idle"

[node name="Camera2D" type="Camera2D" parent="."]
limit_smoothed = true
position_smoothing_enabled = true
script = ExtResource("5")

[node name="InvulnerabilityTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Control" parent="." instance=ExtResource("6")]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 24.0
offset_top = 20.0
offset_right = 24.0
offset_bottom = 100.0
grow_horizontal = 2
size_flags_horizontal = 0

[node name="HbarUnder" parent="Control" index="0"]
layout_mode = 1
anchors_preset = -1
anchor_top = -1.843
anchor_right = 0.0
offset_top = 71.44

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 1.2

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Shoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7")

[node name="Hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, 24.25)
shape = SubResource("1")

[connection signal="health_updated" from="." to="Control" method="_on_Player_health_updated"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]

[editable path="Control"]
